--- a/Frontend/src/app/globals.css
+++ b/Frontend/src/app/globals.css
@@ -18,6 +18,12 @@
     @apply inline-flex items-center px-4 py-2 text-sm font-medium text-white text-center bg-blue-600 border border-transparent rounded-md shadow-sm hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500
     dark:bg-gray-800 dark:hover:bg-gray-700;
   }
+  .card-zoom {
+    @apply hover:scale-105 transition-all ease-in-out duration-200;
+  }
+  .new-line {
+    white-space: pre-wrap;
+  }
 }
 
 
